--- a/WinFormsApp_UnitTest/WinFormsApp_UnitTest.csproj
+++ b/WinFormsApp_UnitTest/WinFormsApp_UnitTest.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DemoLirary\DemoLirary.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
